@@ -28,6 +28,8 @@ setGeneric("setRtNsd", function(object, ...) standardGeneric("setRtNsd"))
 setGeneric("getRtNsd", function(object, ...) standardGeneric("getRtNsd"))
 setGeneric("setPpmError", function(object, ...) standardGeneric("setPpmError"))
 setGeneric("getPpmError", function(object, ...) standardGeneric("getPpmError"))
+setGeneric("setCrossMatchingPpmTolerance", function(object, ...) standardGeneric("setCrossMatchingPpmTolerance"))
+setGeneric("getCrossMatchingPpmTolerance", function(object, ...) standardGeneric("getCrossMatchingPpmTolerance"))
 setGeneric("getPpmErrorQs", function(object, ...) standardGeneric("getPpmErrorQs"))
 setGeneric("getRtQs", function(object, ...) standardGeneric("getRtQs"))
 setGeneric("getPepNumbers", function(object, ...) standardGeneric("getPepNumbers"))
@@ -53,6 +55,7 @@ setGeneric("performance", function(object, ...) standardGeneric("performance"))
 setGeneric("performance2", function(object, ...) standardGeneric("performance2"))
 setGeneric("plotRtDiffs", function(object, ...) standardGeneric("plotRtDiffs"))
 setGeneric("plotGrid", function(object, ...) standardGeneric("plotGrid"))
+setGeneric("crossMatching", function(object, ...) standardGeneric("crossMatching"))
 setGeneric("writeIdentPeptides", function(object, ...) standardGeneric("writeIdentPeptides"))
 setGeneric("writeQuantPeptides", function(object, ...) standardGeneric("writeQuantPeptides"))
 setGeneric("writeMergedPeptides", function(object, ...) standardGeneric("writeMergedPeptides"))
